src/client/style.css
body, html {
    font-family: 'Karla', sans-serif;
    text-rendering: optimizeLegibility !important;
    -webkit-font-smoothing: subpixel-antialiased !important;
    color:#303030;
    font-weight: 700;
    overflow-x:hidden;
}
.container-l{
    position: relative;
    padding-left:0px;
    padding-right:0px;
    width:100%;
}
.container-m{
    position: relative;
    padding-left:80px;
    padding-right:80px;
    max-width:1184px;
    margin-left:auto;
    margin-right:auto;
}
.container-s{
    position: relative;
    padding-left:80px;
    padding-right:80px;
    max-width:800px;
    margin-left:auto;
    margin-right:auto;
}
@media (max-width: 768px) {
  .container-s{
    padding-left:40px;
    padding-right:40px;
}
}
@media (max-width: 480px) {
    .container-m{
    padding-left:10px;
    padding-right:10px;
    }
    .container-s{
    padding-left:10px;
    padding-right:10px;
    }
}
img{
    width:100%;
}

h1{
    letter-spacing:2.5px;
    font-size:42px;
    text-transform: uppercase;
    text-align: center;
    line-height: 60px;  
    font-weight: 700;
}
h2{
    margin:0px;
    letter-spacing:1.5px;
    font-size:28px;
    text-transform: uppercase;
    line-height:28px;
    font-weight: 700;
}
h3{
    font-weight: 700;
    letter-spacing:0.5px;
    font-size: 28px;
    line-height: 34px; 
    text-align:center;
}
h4{
    font-size: 32px;
    font-family: 'Gabriela', serif;
    letter-spacing:1.2px;  
    text-align:center;
    margin-bottom:30px;
}

h5{
    font-weight: 700;
    letter-spacing:0.5px;
    font-size: 20px;
    text-transform: uppercase;
    line-height: 34px; 
    text-align:center;
    margin-bottom: 0px;
}
h6{
    font-weight:700;
    font-size: 18px; 
    line-height:26px; 
    letter-spacing:0.5px;
}
p {
    font-family: 'Gabriela', serif;
    color: black;
    font-weight: 400;
    letter-spacing:0.5px;
    font-size:16px; 
    line-height: 34px;
}
figcaption{
    font-weight:400;
    font-style: ;
    font-size:0.8em;
}
header p {
    font-family: "letter-gothic-std",sans-serif;    
    font-weight: 700;
    letter-spacing:1.2px;
    font-size:14px; 
    line-height: 24px;
    margin:0px;
}

a{
    background-color:;
    color:black;
    text-decoration:none;
    font-size:16px;
    padding:5px;
}

@media (max-width: 768px) {
  h1{
    font-size:36px;
    line-height: 46px;  
    }
  p{
    line-height: 26px;
  }
}
@media (max-width: 480px) {
  h1{
    font-size:32px;
    line-height: 40px;  
    }
  h3{
    font-size:; 
    }
  h4{
    text-align:left;
    margin-bottom:14px;
    }
  h5{
}
}

button {
    font-size:20px;
    font-weight: 700;
    letter-spacing:1.2px;  
    text-transform: uppercase;
    padding:14px;
    padding-left:20px;
    padding-right:20px;
    border: 4px solid #000000;
    background-color: #ffffff;
    cursor:pointer;

}
button:hover, button:focus, button:active {
    outline:0;
}
.btn-header{
}
.btn-header:hover{
    background-color: #FFF146;
    color:;
    top:0px;
    text-decoration: none;
    outline: none; 
    border: 4px solid #FFF146;
}
.btn-header:active{
    position:relative;
    top:1px;
    -webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0);
        -moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0);
            box-shadow: 0px 0px 4px 0px rgba(0,0,0,0);
}
.btn-reserveer{
    position:relative;
    text-align: left;
}

.btn-back{
    padding:4px;
    position:fixed;
    z-index:100;
    top:10px;
    left:10px;
}
.btn-back img{
    width:40px;
}
.btn-secundair{
    position:relative;
    font-size:20px;
    text-align: left;
    letter-spacing:1.2px;  
    color:#0F8D08;
    cursor:pointer;
}
.btn-secundair:hover{
    background-color:;
    color:#033A00;
    text-decoration: underline;
    outline: none; 
}
.btn-secundair:active{
    color:#75F36E;
}
.btn-icon-secundair{
    position: absolute;
    top:2px;
    left:;
}
.btn-icon{
    position: absolute;
    top:12px;
    right:12px;
}
.material-icons.md-36 { font-size: 32px; }
.material-icons.md-24 { font-size: 24px; }
.tag-black{
    background:black;
    color:white;
    display:inline-block;
    padding-left:8px;
    padding-top:4px;
    padding-right:8px;
    border-radius: 2px;
    margin-bottom: 20px;
}
.tag-black h6{
    margin-bottom:4px;
}
/* Nav */
.navbar{
    background-color:white;
    -webkit-box-shadow: 0px 0px 16px 0px rgba(54,54,54,0.15);
        -moz-box-shadow: 0px 0px 16px 0px rgba(54,54,54,0.15);
        box-shadow: 0px 0px 16px 0px rgba(54,54,54,0.15);
    padding-left: 80px;
    padding-top: 20px;
    padding-bottom:20px;
    padding-right:80px;
}
@media (max-width:768px){
  .navbar {
    padding-left: 20px;
    padding-right:20px;
    padding-top: 2px;
    padding-bottom: 2px;

  }
}
.navbar-brand{
    font-size: 28px;
    letter-spacing:1.5px;
}
.navbar-toggler {
    border:none;
}
.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0, 1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}
.custom-toggler.navbar-toggler {
  border-color: rgb(255,102,203);
} 
/* Nav */
.navbar-nav > li >a{
  letter-spacing: 1.2px;
}
.navbar-nav > li > a:hover{
    background-color:;
    text-decoration: underline
}
.nav-link-reserveer>a{
    border: 2px solid #000000;
}
.navbar-nav > .nav-link-reserveer> a:hover{
    color:#000000;
    text-decoration: none;
    background-color:#FFEC00;
    border: 2px solid #FFEC00;
}
.navbar-nav > .active-reserveer> a{
    color:#000000;
    text-decoration: none;
    background-color:#FFEC00;
    border: 2px solid #FFEC00;
}
.navbar-nav > .nav-link-reserveer> a:active{
    position:relative;
    top:1px;
    -webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0);
        -moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,0);
            box-shadow: 0px 0px 4px 0px rgba(0,0,0,0);
}
/* ... */

